--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-sass-bootstrap",
+  "name": "gulp-prototype",
   "version": "1.0.0",
   "description": "Welcome to the Gulp4 SaSS Bootstrap setup using BrowserSync to Automate your changes",
   "main": "gulpfile.js",
@@ -13,14 +13,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amylily1011/gulp4-sass-bootstrap.git"
-  },
-  "author": "Amy Lily",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/amylily1011/gulp4-sass-bootstrap/issues"
-  },
-  "homepage": "https://github.com/amylily1011/gulp4-sass-bootstrap#readme"
+  "author": "Lee Henkel",
+  "license": "ISC"
 }
